<resources>
    <string name="app_name">SU Libraries</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="about_link">Attributions and Privacy</string>
    <string name="support">Support</string>
    <string-array name="user_links">
        <item>My Card</item>
        <item>Chat</item>
        <item>News</item>
    </string-array>
    <string name="helpful_links">Helpful Links</string>
    <string-array name="nav_links">
        <item>QUICK LINKS</item> 
        <item>Home</item>
        <item>Library Hours</item>
        <item>My Card</item>
        <item>Chat</item>
        <item>LIBRARY SERVICES</item>
        <item>Research Help</item>
        <item>Study Room Reservations</item>
        <item>Device Availability</item>
        <item>Helpful Links</item>
        <item>ABOUT THE LIBRARY</item>
        <item>News</item>
        <item>Building Maps</item>
        <item>Contact Information</item>
        <item>About</item>
        <item></item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="json_url">http://libapps.salisbury.edu/app/computers.php?mapid=</string>
    <string name="view_as_map_computer_url">http://labstats.salisbury.edu/LabStats/public/MapViewer/MapFull.aspx?MapID=</string>
    <string name="contact_ask">How would you like to contact</string>
    <string name="app_label">SEARCH label</string>
    <string name="search_hint">Search for resources</string>
    <string name="search_title">Search</string>
    <string-array name="computer_room_names">
        <item>AC102</item>
        <item>AC120</item>
        <item>AC1C5</item>
        <item>AC117</item>
        <item>AC162</item>
        <item>AC2C1</item>
        <item>AC261</item>
        <item>AC262</item>
        <item>AC300</item>
    </string-array>
    <string-array name="computer_group_names">
        <item>The Pit</item>
        <item>24-Hour Area</item>
        <item>Quick Print Stations</item>
        <item>AC 117 Lab</item>
        <item>AC 162 Lab</item>
        <item>South Corridor</item>
        <item>Outside CSA</item>
        <item>CSA Computer Lab</item>
        <item>Third Floor Computers</item>
    </string-array>
    <string-array name="computer_room_descriptions">
        <item>These computers are located in the center of the first floor by the grand staircase.</item>
        <item>These computers are located outside the Mini Lab (Room 118). They are available 24 hours a day.</item>
        <item>These computers are located outside Room 162, across from the print release stations. These are on standing-height desks are meant for quick print jobs.</item>
        <item>These computers are located in the Media Lab (Room 117).</item>
        <item>These computers are located in room 162. Please check the room schedule as it is often reserved for classes.</item>
        <item>These computers are located on the second floor near the group study rooms, ID&amp;D, and the Faculty Lounge.</item>
        <item>These computers are located on the second floor outside the Writing Center and the CSA.</item>
        <item>This computer lab is located on the second floor in room 262.</item>
        <item>These computers are located on the third floor by the Grand Staircase and the seminar rooms.</item>
    </string-array>
    <string-array name="computer_map_ids">
        <item>40</item>
        <item>51</item>
        <item>50</item>
        <item>48</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
    </string-array>
    <string-array name="study_room_ids">
        <item>42092</item>
        <item>42093</item>
        <item>42094</item>
        <item>42095</item>
        <item>42096</item>
        <item>42097</item>
        <item>42099</item>
        <item>42100</item>
        <item>42101</item>
        <item>42102</item>
        <item>42105</item>
        <item>42106</item>
        <item>42107</item>
        <item>42108</item>
        <item>42109</item>
    </string-array>
    <string-array name="study_room_groups">
        <item>14005</item>
        <item>14006</item>
        <item>14007</item>
        <item>14008</item>
        <item>14009</item>
        <item>14010</item>
        <item>14013</item>
        <item>14014</item>
        <item>14015</item>
        <item>14016</item>
        <item>14017</item>
        <item>14018</item>
        <item>14019</item>
        <item>14020</item>
        <item>14021</item>
    </string-array>
    <string-array name="study_room_headers">
        <item>FIRST FLOOR</item>
        <item>OTHER FLOORS</item>
    </string-array>
    <string-array name="study_rooms"> 
        <item>Room 139</item>
        <item>Room 140</item>
        <item>Room 225</item>
        <item>Room 226</item>
        <item>Room 227</item>
        <item>Room 228</item>
        <item>Room 234</item>
        <item>Room 235</item>
        <item>Room 236</item>
        <item>Room 237</item>
        <item>Room 238</item>
        <item>Room 239</item>
        <item>Room 240</item>
        <item>Room 241</item>
        <item>Room 242</item>
    </string-array>
    <string-array name="helpful_headers">
        <item>FREQUENTLY USED DATABASES</item>
        <item>HELP WITH CITATIONS</item>
        <item>OTHER LIBRARY RESOURCES</item>
        <item>SU LINKS</item>
    </string-array>
    <string-array name="helpful_items">
        <item>Academic Search Complete</item>
        <item>JSTOR</item>
        <item>Science Direct</item>
        <item>Web of Science</item>
        <item>SU Libraries Citation Style Guide</item>
        <item>EasyBib</item>
        <item>EndNote Web</item>
        <item>Purdue OWL</item>
        <item>Presenting Your Research</item>
        <item>Copyright</item>
        <item>SOAR@SU</item>
        <item>SU Libraries Research Guides</item>
        <item>SU Library Website</item>
        <item>Nabb Center for Delmarva History</item>
        <item>Curriculum Resource Center</item>
        <item>IT Help Desk</item>
        <item>Center for Student Achievement</item>
        <item>Writing Center</item>
        <item>Salisbury University Homepage</item>
    </string-array>
    <string-array name="helpful_strings">
        <item>FREQUENTLY USED DATABASES</item> 
        <item>Academic Search Complete</item>
        <item>JSTOR</item>
        <item>Science Direct</item>
        <item>Web of Science</item>
        <item>HELP WITH CITATIONS</item> 
        <item>SU Libraries Citation Style Guide</item>
        <item>EasyBib</item>
        <item>EndNote Web</item>
        <item>Purdue OWL</item>
        <item>OTHER LIBRARY RESOURCES</item> 
        <item>Presenting Your Research</item>
        <item>Copyright</item>
        <item>SOAR@SU</item>
        <item>SU Libraries Research Guides</item>
        <item>SU Library Website</item>
        <item>Nabb Center for Delmarva History</item>
        <item>Curriculum Resource Center</item>
        <item>SU LINKS</item> 
        <item>IT Help Desk</item>
        <item>Center for Student Achievement</item>
        <item>Writing Center</item>
        <item>Salisbury University Homepage</item>
    </string-array>
    <string name="dialog_call_click">How would you like to contact </string>
    <string name="click">Email</string>
    <string name="call">Phone</string>
    <string name="cancel">Cancel</string>
    <string-array name="contact_headers">
        <item>LIVE CHAT</item>
        <item>BY PHONE</item>
        <item>BY EMAIL</item>
        <item>LIBRARY FACULTY &amp; STAFF</item>
    </string-array>
    <string-array name="contact_who">
        <item>Guerrieri <br /> Academic <br />  Commons</item>
        <item>SU Libraries <br /> MakerLab</item>
        <item>Curriculum <br /> Resource <br /> Center</item>
        <item>Research Help</item>
        <item>Circulation</item>
        <item>Toll Free</item>
        <item>App Support</item>
        <item>Research Help</item>
        <item>Circulation</item>
        <item>Interlibrary <br /> Loan</item>
        <item>SOAR@SU</item>
        <item>App Support</item>
        <item>Jan Bellistri</item>
        <item>Susan Brazer</item>
        <item>S. Pilar Burton</item>
        <item>Mou Chakraborty</item>
        <item>Helen Chaphe</item>
        <item>Fanuel Chirombo</item>
        <item>Stacy Cooper</item>
        <item>Tara Custer</item>
        <item>Beverly Dennis</item>
        <item>Caroline Eckhardt</item>
        <item>Stephen Ford</item>
        <item>Laura Hanscom</item>
        <item>Bea Hardy</item>
        <item>T. Aaron Horner</item>
        <item>Iris Jenkins</item>
        <item>Amy Jones</item>
        <item>Autumn Kinsey</item>
        <item>Janie Kreines</item>
        <item>Cassy Lewis</item>
        <item>Creston Long</item>
        <item>Jennifer Martin</item>
        <item>Leslie Van Veen McRoberts</item>
        <item>Donna Messick</item>
        <item>James Parrigin</item>
        <item>Ian Post</item>
        <item>Angeline</item>
        <item>Gaylord Robb</item>
        <item>Leigh Ann Roye</item>
        <item>Susie Ruddy</item>
        <item>Audrey Schadt</item>
        <item>Lesley Schiff</item>
        <item>Robin Vickery</item>
        <item>Liz Wallace</item>
        <item>Karen Wilson</item>
        <item>Chris Woodall</item>
        <item>Martha Zimmerman</item>
    </string-array>
    <string name="airs">iPad Airs</string>
    <string name="minis">iPad minis</string>
    <string name="pros">iPad Pros</string>
    <string name="touches">iPod touches</string>
    <string name="fitbits">Fitbits</string>
    <string name="accessories">Other Devices</string>
    <string name="device_filter_header">Choose which devices you would like to see on the Device Avaiability screen.</string>
</resources>